--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 <body>
     <button>Change Grid Size</button>
     <div id="container" class="flex-container">
-        <div id="display">123</div>
-        <div id="clear" class="button">C</div>
+        <div id="display">0</div>
+        <div id="clear">C</div>
         <div id="blank"></div>
-        <div id="divide" class="button">÷</div>
+        <div id="divide" class="operator_button">÷</div>
         <div id="seven" class="button">7</div>
         <div id="eight" class="button">8</div>
         <div id="nine" class="button">9</div>
-        <div id="times" class="button">×</div>
+        <div id="times" class="operator_button">×</div>
         <div id="four" class="button">4</div>
         <div id="five" class="button">5</div>
         <div id="six" class="button">6</div>
-        <div id="minus" class="button">-</div>
+        <div id="minus" class="operator_button">-</div>
         <div id="one" class="button">1</div>
         <div id="two" class="button">2</div>
         <div id="three" class="button">3</div>
-        <div id="plus" class="button">+</div>
+        <div id="plus" class="operator_button">+</div>
         <div id="zero" class="button">0</div>
-        <div id="equals" class="button">=</div>
+        <div id="equals">=</div>
     </div>
 </body>
 </html>
