--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button>Change Grid Size</button>
     <div id="container" class="flex-container">
         <div id="display">0</div>
         <div id="clear">C</div>
@@ -26,6 +25,8 @@
         <div id="three" class="button">3</div>
         <div id="plus" class="operator_button">+</div>
         <div id="zero" class="button">0</div>
+        <div id="decimal">.</div>
+        <div id="backspace">←</div>
         <div id="equals">=</div>
     </div>
 </body>
