Added ability to enter decimals, keyboard support, CSS styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="three" class="button">3</div>
         <div id="plus" class="operator_button">+</div>
         <div id="zero" class="button">0</div>
-        <div id="decimal">.</div>
+        <div id="decimal" class="button">.</div>
         <div id="backspace">←</div>
         <div id="equals">=</div>
     </div>
